# chip8-emu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: README.md
src/: chip8.rs  display.rs  instructions.rs  keyboard.rs  main.rs  ram.rs  registers.rs
src/emu/: chip8.rs  io.rs  memory.rs  mod.rs
src/utl/: config.rs
